CTA Section1 Added

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <div class="container hero-section-container position-relative z-1 d-flex">
       <div class="row align-items-center">
         <div class="hero-section">
-          <div class="col-lg-6">
+          <div class="col-lg-7">
             <h1 class="mb-3 text-white">Transforming Spaces, Elevating Lives</h1>
           </div>
           <div class="col-lg-8">
@@ -276,6 +276,17 @@
         <a href="#" class="gallery-item item-11">
           <img src="assets/images/inspiration/inspiration-img-11.jpg" alt="Design Inspiration 11" class="gallery-img">
         </a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Smart Budgeting Section -->
+  <section class="budget-cta-section container">
+    <div class="budget-cta-container">
+      <div class="budget-cta-content">
+        <h2 class="budget-cta-title">Smart Budgeting First</h2>
+        <p class="budget-cta-description">Plan your renovation with cost clarity before meeting designers.</p>
+        <a href="#" class="btn btn-primary">Calculate Now</a>
       </div>
     </div>
   </section>
