Lazy load implemented

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="container">
       <!-- Logo -->
       <a class="navbar-brand" href="#">
-        <img src="assets/brand/logo.png" alt="DesignPlus" height="48">
+        <img src="assets/brand/logo.png" alt="DesignPlus" height="48" loading="lazy" decoding="async">
       </a>
 
       <!-- Mobile Toggle -->
@@ -117,7 +117,7 @@
   <!-- Hero -->
   <header id="hero" class="hero-video-section position-relative overflow-hidden">
     <!-- Background Video -->
-    <video class="hero-bg-video" autoplay muted loop playsinline>
+    <video class="hero-bg-video" autoplay muted loop playsinline preload="none" poster="assets/video/hero-bg-poster.jpg">
       <source src="assets/video/hero-bg.mp4" type="video/mp4">
     </video>
 
@@ -143,27 +143,27 @@
             <div class="tag-buttons mb-4">
               <a href="#hdb" class="tag-btn">
                 <span>HDB</span>
-                <img src="assets/icons/arrow-right.svg" alt="Arrow right" class="arrow-icon">
+                <img src="assets/icons/arrow-right.svg" alt="Arrow right" class="arrow-icon" loading="lazy" decoding="async">
               </a>
               <a href="#space-saving" class="tag-btn">
                 <span>Space-saving</span>
-                <img src="assets/icons/arrow-right.svg" alt="Arrow right" class="arrow-icon">
+                <img src="assets/icons/arrow-right.svg" alt="Arrow right" class="arrow-icon" loading="lazy" decoding="async">
               </a>
               <a href="#luxury" class="tag-btn">
                 <span>Luxury Interiors</span>
-                <img src="assets/icons/arrow-right.svg" alt="Arrow right" class="arrow-icon">
+                <img src="assets/icons/arrow-right.svg" alt="Arrow right" class="arrow-icon" loading="lazy" decoding="async">
               </a>
               <a href="#modular-kitchen" class="tag-btn">
                 <span>Modular Kitchen</span>
-                <img src="assets/icons/arrow-right.svg" alt="Arrow right" class="arrow-icon">
+                <img src="assets/icons/arrow-right.svg" alt="Arrow right" class="arrow-icon" loading="lazy" decoding="async">
               </a>
               <a href="#budget" class="tag-btn">
                 <span>Budget Makeover</span>
-                <img src="assets/icons/arrow-right.svg" alt="Arrow right" class="arrow-icon">
+                <img src="assets/icons/arrow-right.svg" alt="Arrow right" class="arrow-icon" loading="lazy" decoding="async">
               </a>
               <a href="#condo" class="tag-btn">
                 <span>Condo</span>
-                <img src="assets/icons/arrow-right.svg" alt="Arrow right" class="arrow-icon">
+                <img src="assets/icons/arrow-right.svg" alt="Arrow right" class="arrow-icon" loading="lazy" decoding="async">
               </a>
             </div>
           </div>
@@ -178,7 +178,7 @@
       <div class="features-grid">
         <div class="feature-card">
           <div class="feature-icon">
-            <img src="assets/images/verified-professionals.svg" alt="Verified Professionals" class="feature-img">
+            <img src="assets/images/verified-professionals.svg" alt="Verified Professionals" class="feature-img" loading="lazy" decoding="async">
           </div>
           <h3 class="feature-title">Verified Professionals</h3>
           <p class="feature-description">We only list firms that pass our rigorous identity and quality checks.</p>
@@ -186,7 +186,7 @@
 
         <div class="feature-card">
           <div class="feature-icon">
-            <img src="assets/images/transparent-pricing.svg" alt="Transparent Pricing" class="feature-img">
+            <img src="assets/images/transparent-pricing.svg" alt="Transparent Pricing" class="feature-img" loading="lazy" decoding="async">
           </div>
           <h3 class="feature-title">Transparent Pricing</h3>
           <p class="feature-description">No surprises. Our platform is 100% free and we never take commissions.</p>
@@ -194,7 +194,7 @@
 
         <div class="feature-card">
           <div class="feature-icon">
-            <img src="assets/images/casetrust-accrediation.svg" alt="CaseTrust Accreditation" class="feature-img">
+            <img src="assets/images/casetrust-accrediation.svg" alt="CaseTrust Accreditation" class="feature-img" loading="lazy" decoding="async">
           </div>
           <h3 class="feature-title">CaseTrust Accreditation</h3>
           <p class="feature-description">Partnered only with Casetrust-certified firms for added peace of mind and
@@ -211,7 +211,7 @@
       <div class="start-smart-grid">
         <div class="start-smart-card">
           <div class="card-image">
-            <img src="assets/images/direct-contractor.jpg" alt="Direct Contractor" class="card-img">
+            <img src="assets/images/direct-contractor.jpg" alt="Direct Contractor" class="card-img" loading="lazy" decoding="async">
           </div>
           <h4 class="card-title">Direct Contractor</h4>
           <p class="card-description">Not sure where to start? Tell us your renovation needs and we'll send you a
@@ -221,7 +221,7 @@
 
         <div class="start-smart-card">
           <div class="card-image">
-            <img src="assets/images/dp-originals.jpg" alt="DP Originals" class="card-img">
+            <img src="assets/images/dp-originals.jpg" alt="DP Originals" class="card-img" loading="lazy" decoding="async">
           </div>
           <h4 class="card-title">DP Originals</h4>
           <p class="card-description">Know your style already? Browse handpicked interior designers and send enquiries
@@ -231,7 +231,7 @@
 
         <div class="start-smart-card">
           <div class="card-image">
-            <img src="assets/images/interior-design-services.jpg" alt="Interior Design Services" class="card-img">
+            <img src="assets/images/interior-design-services.jpg" alt="Interior Design Services" class="card-img" loading="lazy" decoding="async">
           </div>
           <h4 class="card-title">Interior Design Services</h4>
           <p class="card-description">Let Renobot match you with the right interior designers based on your style,
@@ -252,37 +252,37 @@
       </div>
       <div class="inspiration-gallery">
         <a href="#" class="gallery-item item-1">
-          <img src="assets/images/inspiration/inspiration-img-1.jpg" alt="Design Inspiration 1" class="gallery-img">
+          <img src="assets/images/inspiration/inspiration-img-1.jpg" alt="Design Inspiration 1" class="gallery-img" loading="lazy" decoding="async">
         </a>
         <a href="#" class="gallery-item item-2">
-          <img src="assets/images/inspiration/inspiration-img-2.jpg" alt="Design Inspiration 2" class="gallery-img">
+          <img src="assets/images/inspiration/inspiration-img-2.jpg" alt="Design Inspiration 2" class="gallery-img" loading="lazy" decoding="async">
         </a>
         <a href="#" class="gallery-item item-3">
-          <img src="assets/images/inspiration/inspiration-img-3.jpg" alt="Design Inspiration 3" class="gallery-img">
+          <img src="assets/images/inspiration/inspiration-img-3.jpg" alt="Design Inspiration 3" class="gallery-img" loading="lazy" decoding="async">
         </a>
         <a href="#" class="gallery-item item-4">
-          <img src="assets/images/inspiration/inspiration-img-4.jpg" alt="Design Inspiration 4" class="gallery-img">
+          <img src="assets/images/inspiration/inspiration-img-4.jpg" alt="Design Inspiration 4" class="gallery-img" loading="lazy" decoding="async">
         </a>
         <a href="#" class="gallery-item item-5">
-          <img src="assets/images/inspiration/inspiration-img-5.jpg" alt="Design Inspiration 5" class="gallery-img">
+          <img src="assets/images/inspiration/inspiration-img-5.jpg" alt="Design Inspiration 5" class="gallery-img" loading="lazy" decoding="async">
         </a>
         <a href="#" class="gallery-item item-6">
-          <img src="assets/images/inspiration/inspiration-img-6.jpg" alt="Design Inspiration 6" class="gallery-img">
+          <img src="assets/images/inspiration/inspiration-img-6.jpg" alt="Design Inspiration 6" class="gallery-img" loading="lazy" decoding="async">
         </a>
         <a href="#" class="gallery-item item-7">
-          <img src="assets/images/inspiration/inspiration-img-7.jpg" alt="Design Inspiration 7" class="gallery-img">
+          <img src="assets/images/inspiration/inspiration-img-7.jpg" alt="Design Inspiration 7" class="gallery-img" loading="lazy" decoding="async">
         </a>
         <a href="#" class="gallery-item item-8">
-          <img src="assets/images/inspiration/inspiration-img-8.jpg" alt="Design Inspiration 8" class="gallery-img">
+          <img src="assets/images/inspiration/inspiration-img-8.jpg" alt="Design Inspiration 8" class="gallery-img" loading="lazy" decoding="async">
         </a>
         <a href="#" class="gallery-item item-9">
-          <img src="assets/images/inspiration/inspiration-img-9.jpg" alt="Design Inspiration 9" class="gallery-img">
+          <img src="assets/images/inspiration/inspiration-img-9.jpg" alt="Design Inspiration 9" class="gallery-img" loading="lazy" decoding="async">
         </a>
         <a href="#" class="gallery-item item-10">
-          <img src="assets/images/inspiration/inspiration-img-10.jpg" alt="Design Inspiration 10" class="gallery-img">
+          <img src="assets/images/inspiration/inspiration-img-10.jpg" alt="Design Inspiration 10" class="gallery-img" loading="lazy" decoding="async">
         </a>
         <a href="#" class="gallery-item item-11">
-          <img src="assets/images/inspiration/inspiration-img-11.jpg" alt="Design Inspiration 11" class="gallery-img">
+          <img src="assets/images/inspiration/inspiration-img-11.jpg" alt="Design Inspiration 11" class="gallery-img" loading="lazy" decoding="async">
         </a>
       </div>
     </div>
@@ -290,7 +290,7 @@
 
   <!-- Smart Budgeting Section -->
   <section class="budget-cta-section container">
-    <div class="budget-cta-container">
+    <div class="budget-cta-container" data-bg="assets/images/smart-budgeting-first.jpg">
       <div class="budget-cta-content">
         <h2 class="budget-cta-title">Smart Budgeting First</h2>
         <p class="budget-cta-description">Plan your renovation with cost clarity before meeting designers.</p>
@@ -306,10 +306,10 @@
         <h2 class="reviews-title">Designer Spotlight</h2>
         <a class="google-review-link" href="https://search.google.com/local/reviews?placeid=ChIJH9kaPBIY2jERzxtVFt8ZQB8"
           target="_blank" rel="noopener">
-          <img src="assets/icons/google.svg" alt="Google" class="google-icon">
+          <img src="assets/icons/google.svg" alt="Google" class="google-icon" loading="lazy" decoding="async">
           <span class="google-text">Google reviews</span>
           <span class="google-stars">
-            <img src="assets/icons/star.svg" alt="star" class="star-icon">
+            <img src="assets/icons/star.svg" alt="star" class="star-icon" loading="lazy" decoding="async">
             <img src="assets/icons/star.svg" alt="star" class="star-icon">
             <img src="assets/icons/star.svg" alt="star" class="star-icon">
             <img src="assets/icons/star.svg" alt="star" class="star-icon">
@@ -318,7 +318,7 @@
           <span class="google-rating">4.9 stars</span>
           <span class="google-sep">|</span>
           <span class="google-count">482 Reviews</span>
-          <img src="assets/icons/alt-arrow-right.svg" alt="arrow" class="arrow-icon">
+          <img src="assets/icons/alt-arrow-right.svg" alt="arrow" class="arrow-icon" loading="lazy" decoding="async">
         </a>
       </div>
 
@@ -348,7 +348,7 @@
                   listen to you guys’s constructive suggestion during the renovation period! Thank you</p>
 
                 <div class="designer-box">
-                  <img src="assets/images/designer/calvin-ong.png" alt="Calvin Ong" class="designer-avatar">
+                  <img src="assets/images/designer/calvin-ong.png" alt="Calvin Ong" class="designer-avatar" loading="lazy" decoding="async">
                   <div class="designer-info">
                     <a href="#" class="designer-name">Calvin Ong</a>
                     <div class="designer-role">Senior Creative Designer</div>
@@ -357,7 +357,7 @@
               </div>
               <div class="review-right">
                 <div class="project-image-wrap">
-                  <img src="assets/images/review/project-review-1.jpg" alt="Project" class="project-image">
+                  <img src="assets/images/review/project-review-1.jpg" alt="Project" class="project-image" loading="lazy" decoding="async">
                   <div class="project-overlay"></div>
                   <a href="#" class="project-cta">View Project</a>
                 </div>
@@ -389,7 +389,7 @@
                   renovation process. Thank you for making this experience so positive!</p>
 
                 <div class="designer-box">
-                  <img src="assets/images/designer/calvin-ong.png" alt="Calvin Ong" class="designer-avatar">
+                  <img src="assets/images/designer/calvin-ong.png" alt="Calvin Ong" class="designer-avatar" loading="lazy" decoding="async">
                   <div class="designer-info">
                     <a href="#" class="designer-name">Calvin Ong</a>
                     <div class="designer-role">Senior Creative Designer</div>
@@ -398,7 +398,7 @@
               </div>
               <div class="review-right">
                 <div class="project-image-wrap">
-                  <img src="assets/images/review/project-review-2.jpg" alt="Project" class="project-image">
+                  <img src="assets/images/review/project-review-2.jpg" alt="Project" class="project-image" loading="lazy" decoding="async">
                   <div class="project-overlay"></div>
                   <a href="#" class="project-cta">View Project</a>
                 </div>
