Why DesignPlus section added

--- a/index.html
+++ b/index.html
@@ -410,6 +410,74 @@
     </div>
   </section>
 
+  <!-- Why DesignPlus Section -->
+  <section class="why-designplus-section">
+    <div class="container">
+      <h2 class="why-designplus-title">Why DesignPlus</h2>
+      <div class="why-designplus-grid">
+        <div class="why-designplus-card">
+          <div class="why-designplus-icon-container">
+            <img src="assets/icons/streamlined-design-process.svg" alt="Streamlined Design Process" class="why-designplus-icon" loading="lazy" decoding="async">
+          </div>
+          <div class="why-designplus-content">
+            <h4 class="why-designplus-card-title">Streamlined Design Process</h4>
+            <p class="why-designplus-description">Experience an efficient SaaS platform that connects suppliers, designers, and you, simplifying the design and implementation of interior spaces for cost savings and improved time management.</p>
+          </div>
+        </div>
+
+        <div class="why-designplus-card">
+          <div class="why-designplus-icon-container">
+            <img src="assets/icons/ai-aided-shopping-list.svg" alt="AI-Aided Shopping List" class="why-designplus-icon" loading="lazy" decoding="async">
+          </div>
+          <div class="why-designplus-content">
+            <h4 class="why-designplus-card-title">AI-Aided Shopping List</h4>
+            <p class="why-designplus-description">Simplify sourcing with our unique one-stop shopping solution for decor and electrical appliances.</p>
+          </div>
+        </div>
+
+        <div class="why-designplus-card">
+          <div class="why-designplus-icon-container">
+            <img src="assets/icons/peace-of-mind-assurance.svg" alt="Peace of Mind Assurance" class="why-designplus-icon" loading="lazy" decoding="async">
+          </div>
+          <div class="why-designplus-content">
+            <h4 class="why-designplus-card-title">Peace of Mind Assurance</h4>
+            <p class="why-designplus-description">Enjoy extended warranty and dedicated customer service, ensuring confidence in the quality of work done through our platform and setting us apart from competitors.</p>
+          </div>
+        </div>
+
+        <div class="why-designplus-card">
+          <div class="why-designplus-icon-container">
+            <img src="assets/icons/transparent-pricing-for-value.svg" alt="Transparent Pricing for Value" class="why-designplus-icon" loading="lazy" decoding="async">
+          </div>
+          <div class="why-designplus-content">
+            <h4 class="why-designplus-card-title">Transparent Pricing for Value</h4>
+            <p class="why-designplus-description">Experience fair pricing based on real-time market data and analysis, providing you with confidence and excellent value.</p>
+          </div>
+        </div>
+
+        <div class="why-designplus-card">
+          <div class="why-designplus-icon-container">
+            <img src="assets/icons/global-design-talent.svg" alt="Global Design Talent" class="why-designplus-icon" loading="lazy" decoding="async">
+          </div>
+          <div class="why-designplus-content">
+            <h4 class="why-designplus-card-title">Global Design Talent</h4>
+            <p class="why-designplus-description">Access diverse designers worldwide, adding unique and diverse options to your design journey.</p>
+          </div>
+        </div>
+
+        <div class="why-designplus-card">
+          <div class="why-designplus-icon-container">
+            <img src="assets/icons/sustainable-design-solutions.svg" alt="Sustainable Design Solutions" class="why-designplus-icon" loading="lazy" decoding="async">
+          </div>
+          <div class="why-designplus-content">
+            <h4 class="why-designplus-card-title">Sustainable Design Solutions</h4>
+            <p class="why-designplus-description">Embrace eco-friendly and sustainable design practices with our curated selection of green materials and solutions, helping you create beautiful spaces with minimal environmental impact.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
