--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
     </div>
   </section>
 
+
   <!-- Start Smart Section -->
   <section class="start-smart-section">
     <div class="container">
@@ -477,6 +478,116 @@
       </div>
     </div>
   </section>
+
+  <!-- App Banner Section -->
+  <section class="app-banner-section container">
+    <div class="app-banner-container" data-bg="assets/images/app-banner-bg.jpg">
+      <div class="app-banner-content">
+        <h2 class="app-banner-title">DesignPlus in Your Pocket</h2>
+        <p class="app-banner-description">Everything you need for a smooth renovation journey - now mobile.</p>
+        <div class="app-banner-buttons">
+          <a href="https://apps.apple.com/us/app/designplus-interior/id6451096540" class="app-store-link">
+            <img src="assets/images/app-store.svg" alt="Download on the App Store" class="app-store-image" loading="lazy" decoding="async">
+          </a>
+          <a href="https://play.google.com/store/apps/details?id=com.designplus.sg" class="play-store-link">
+            <img src="assets/images/play-store.svg" alt="GET IT ON Google Play" class="play-store-image" loading="lazy" decoding="async">
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+    <!-- Our Partners Section -->
+    <section class="partners-section">
+      <div class="container">
+        <h2 class="partners-title">Our Partners</h2>
+        <div class="swiper partners-swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="partner-logo-box"><img src="assets/images/partner/dp-partner-1.png" alt="Partner 1" class="partner-logo" loading="lazy" decoding="async"></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partner-logo-box"><img src="assets/images/partner/dp-partner-2.jpeg" alt="Partner 2" class="partner-logo" loading="lazy" decoding="async"></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partner-logo-box"><img src="assets/images/partner/dp-partner-3.png" alt="Partner 3" class="partner-logo" loading="lazy" decoding="async"></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partner-logo-box"><img src="assets/images/partner/dp-partner-4.png" alt="Partner 4" class="partner-logo" loading="lazy" decoding="async"></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partner-logo-box"><img src="assets/images/partner/dp-partner-5.jpeg" alt="Partner 5" class="partner-logo" loading="lazy" decoding="async"></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partner-logo-box"><img src="assets/images/partner/dp-partner-6.png" alt="Partner 6" class="partner-logo" loading="lazy" decoding="async"></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partner-logo-box"><img src="assets/images/partner/dp-partner-7.png" alt="Partner 7" class="partner-logo" loading="lazy" decoding="async"></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partner-logo-box"><img src="assets/images/partner/dp-partner-8.png" alt="Partner 8" class="partner-logo" loading="lazy" decoding="async"></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partner-logo-box"><img src="assets/images/partner/dp-partner-9.jpeg" alt="Partner 9" class="partner-logo" loading="lazy" decoding="async"></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partner-logo-box"><img src="assets/images/partner/dp-partner-10.jpeg" alt="Partner 10" class="partner-logo" loading="lazy" decoding="async"></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partner-logo-box"><img src="assets/images/partner/dp-partner-11.jpeg" alt="Partner 11" class="partner-logo" loading="lazy" decoding="async"></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partner-logo-box"><img src="assets/images/partner/dp-partner-12.jpeg" alt="Partner 12" class="partner-logo" loading="lazy" decoding="async"></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partner-logo-box"><img src="assets/images/partner/dp-partner-13.png" alt="Partner 13" class="partner-logo" loading="lazy" decoding="async"></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partner-logo-box"><img src="assets/images/partner/dp-partner-14.jpeg" alt="Partner 14" class="partner-logo" loading="lazy" decoding="async"></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partner-logo-box"><img src="assets/images/partner/dp-partner-15.png" alt="Partner 15" class="partner-logo" loading="lazy" decoding="async"></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partner-logo-box"><img src="assets/images/partner/dp-partner-16.jpeg" alt="Partner 16" class="partner-logo" loading="lazy" decoding="async"></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partner-logo-box"><img src="assets/images/partner/dp-partner-17.png" alt="Partner 17" class="partner-logo" loading="lazy" decoding="async"></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partner-logo-box"><img src="assets/images/partner/dp-partner-18.jpeg" alt="Partner 18" class="partner-logo" loading="lazy" decoding="async"></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partner-logo-box"><img src="assets/images/partner/dp-partner-19.png" alt="Partner 19" class="partner-logo" loading="lazy" decoding="async"></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partner-logo-box"><img src="assets/images/partner/dp-partner-20.jpeg" alt="Partner 20" class="partner-logo" loading="lazy" decoding="async"></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partner-logo-box"><img src="assets/images/partner/dp-partner-21.jpeg" alt="Partner 21" class="partner-logo" loading="lazy" decoding="async"></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partner-logo-box"><img src="assets/images/partner/dp-partner-22.jpeg" alt="Partner 22" class="partner-logo" loading="lazy" decoding="async"></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partner-logo-box"><img src="assets/images/partner/dp-partner-23.jpeg" alt="Partner 23" class="partner-logo" loading="lazy" decoding="async"></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partner-logo-box"><img src="assets/images/partner/dp-partner-24.png" alt="Partner 24" class="partner-logo" loading="lazy" decoding="async"></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partner-logo-box"><img src="assets/images/partner/dp-partner-25.jpeg" alt="Partner 25" class="partner-logo" loading="lazy" decoding="async"></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partner-logo-box"><img src="assets/images/partner/dp-partner-26.jpeg" alt="Partner 26" class="partner-logo" loading="lazy" decoding="async"></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partner-logo-box"><img src="assets/images/partner/dp-partner-27.jpeg" alt="Partner 27" class="partner-logo" loading="lazy" decoding="async"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
