Hover Animation added for Inspiration Section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </div>
 
   <!-- Main Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom sticky-top">
+  <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
     <div class="container">
       <!-- Logo -->
       <a class="navbar-brand" href="#">
@@ -254,36 +254,80 @@
       <div class="inspiration-gallery">
         <a href="#" class="gallery-item item-1">
           <img src="assets/images/inspiration/inspiration-img-1.jpg" alt="Design Inspiration 1" class="gallery-img" loading="lazy" decoding="async">
+            <div class="gallery-caption">
+            <p class="gallery-title">Inspiration 1</p>
+            <p class="gallery-designer">Designer: DesignPlus</p>
+          </div>
         </a>
         <a href="#" class="gallery-item item-2">
           <img src="assets/images/inspiration/inspiration-img-2.jpg" alt="Design Inspiration 2" class="gallery-img" loading="lazy" decoding="async">
+          <div class="gallery-caption">
+            <p class="gallery-title">Inspiration 2</p>
+            <p class="gallery-designer">Designer: DesignPlus</p>
+          </div>
         </a>
         <a href="#" class="gallery-item item-3">
           <img src="assets/images/inspiration/inspiration-img-3.jpg" alt="Design Inspiration 3" class="gallery-img" loading="lazy" decoding="async">
+          <div class="gallery-caption">
+            <p class="gallery-title">Inspiration 3</p>
+            <p class="gallery-designer">Designer: DesignPlus</p>
+          </div>
         </a>
         <a href="#" class="gallery-item item-4">
           <img src="assets/images/inspiration/inspiration-img-4.jpg" alt="Design Inspiration 4" class="gallery-img" loading="lazy" decoding="async">
+          <div class="gallery-caption">
+            <p class="gallery-title">Inspiration 4</p>
+            <p class="gallery-designer">Designer: DesignPlus</p>
+          </div>
         </a>
         <a href="#" class="gallery-item item-5">
           <img src="assets/images/inspiration/inspiration-img-5.jpg" alt="Design Inspiration 5" class="gallery-img" loading="lazy" decoding="async">
+          <div class="gallery-caption">
+            <p class="gallery-title">Inspiration 5</p>
+            <p class="gallery-designer">Designer: DesignPlus</p>
+          </div>
         </a>
         <a href="#" class="gallery-item item-6">
           <img src="assets/images/inspiration/inspiration-img-6.jpg" alt="Design Inspiration 6" class="gallery-img" loading="lazy" decoding="async">
+          <div class="gallery-caption">
+            <p class="gallery-title">Inspiration 6</p>
+            <p class="gallery-designer">Designer: DesignPlus</p>
+          </div>
         </a>
         <a href="#" class="gallery-item item-7">
           <img src="assets/images/inspiration/inspiration-img-7.jpg" alt="Design Inspiration 7" class="gallery-img" loading="lazy" decoding="async">
+          <div class="gallery-caption">
+            <p class="gallery-title">Inspiration 7</p>
+            <p class="gallery-designer">Designer: DesignPlus</p>
+          </div>
         </a>
         <a href="#" class="gallery-item item-8">
           <img src="assets/images/inspiration/inspiration-img-8.jpg" alt="Design Inspiration 8" class="gallery-img" loading="lazy" decoding="async">
+          <div class="gallery-caption">
+            <p class="gallery-title">Inspiration 8</p>
+            <p class="gallery-designer">Designer: DesignPlus</p>
+          </div>
         </a>
         <a href="#" class="gallery-item item-9">
           <img src="assets/images/inspiration/inspiration-img-9.jpg" alt="Design Inspiration 9" class="gallery-img" loading="lazy" decoding="async">
+          <div class="gallery-caption">
+            <p class="gallery-title">Inspiration 9</p>
+            <p class="gallery-designer">Designer: DesignPlus</p>
+          </div>
         </a>
         <a href="#" class="gallery-item item-10">
           <img src="assets/images/inspiration/inspiration-img-10.jpg" alt="Design Inspiration 10" class="gallery-img" loading="lazy" decoding="async">
+          <div class="gallery-caption">
+            <p class="gallery-title">Inspiration 10</p>
+            <p class="gallery-designer">Designer: DesignPlus</p>
+          </div>
         </a>
         <a href="#" class="gallery-item item-11">
           <img src="assets/images/inspiration/inspiration-img-11.jpg" alt="Design Inspiration 11" class="gallery-img" loading="lazy" decoding="async">
+          <div class="gallery-caption">
+            <p class="gallery-title">Inspiration 11</p>
+            <p class="gallery-designer">Designer: DesignPlus</p>
+          </div>
         </a>
       </div>
     </div>
@@ -406,6 +450,8 @@
               </div>
             </article>
           </div>
+
+
         </div>
       </div>
     </div>
