--- a/index.html
+++ b/index.html
@@ -525,17 +525,17 @@
     </div>
   </section>
 
-  <!-- App Banner Section -->
-  <section class="app-banner-section container">
-    <div class="app-banner-container" data-bg="assets/images/app-banner-bg.jpg">
-      <div class="app-banner-content">
-        <h2 class="app-banner-title">DesignPlus in Your Pocket</h2>
-        <p class="app-banner-description">Everything you need for a smooth renovation journey - now mobile.</p>
-        <div class="app-banner-buttons">
-          <a href="https://apps.apple.com/us/app/designplus-interior/id6451096540" class="app-store-link">
+  <!-- Mobile Experience Section (renamed to avoid adblock filters) -->
+  <section class="mobile-experience-section container">
+    <div class="mobile-experience-container" data-bg="assets/images/app-banner-bg.jpg">
+      <div class="mobile-experience-content">
+        <h2 class="mobile-experience-title">DesignPlus in Your Pocket</h2>
+        <p class="mobile-experience-description">Everything you need for a smooth renovation journey - now mobile.</p>
+        <div class="mobile-experience-buttons">
+          <a href="https://apps.apple.com/us/app/designplus-interior/id6451096540" class="app-store-link" target="_blank" rel="noopener noreferrer">
             <img src="assets/images/app-store.svg" alt="Download on the App Store" class="app-store-image" loading="lazy" decoding="async">
           </a>
-          <a href="https://play.google.com/store/apps/details?id=com.designplus.sg" class="play-store-link">
+          <a href="https://play.google.com/store/apps/details?id=com.designplus.sg" class="play-store-link" target="_blank" rel="noopener noreferrer">
             <img src="assets/images/play-store.svg" alt="GET IT ON Google Play" class="play-store-image" loading="lazy" decoding="async">
           </a>
         </div>
