Footer Section Added

--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
     </div>
   </section>
 
-  <!-- Mobile Experience Section (renamed to avoid adblock filters) -->
+  <!-- Mobile Experience Section -->
   <section class="mobile-experience-section container">
     <div class="mobile-experience-container" data-bg="assets/images/app-banner-bg.jpg">
       <div class="mobile-experience-content">
@@ -634,6 +634,104 @@
         </div>
       </div>
     </section>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-main">
+        <div class="footer-brand">
+          <div class="footer-logo">
+            <img src="assets/brand/logo.png" alt="DesignPlus" height="62" loading="lazy" decoding="async">
+          </div>
+          <h6 class="footer-company-name">Design Plus Interior Pte. Ltd</h6>
+          <div class="footer-certifications">
+            <img src="assets/images/hdb-img.png" alt="HDB Licensed" class="certification-img" loading="lazy" decoding="async">
+            <img src="assets/images/bizsafe-img.png" alt="bizSAFE" class="certification-img" loading="lazy" decoding="async">
+          </div>
+        </div>
+        <div class="footer-info">
+          <div class="footer-section footer-address">
+            <h5 class="footer-section-title">Address</h5>
+            <p class="footer-text">70A Neil Road Singapore 088837</p>
+          </div>
+          <div class="footer-section footer-uen">
+            <h5 class="footer-section-title">UEN</h5>
+            <p class="footer-text">201937838G</p>
+          </div>
+          <div class="footer-section footer-license">
+            <h5 class="footer-section-title">HDB License</h5>
+            <p class="footer-text">HB-05-5965C</p>
+          </div>
+        </div>
+        <div class="footer-links">
+          <div class="footer-section footer-know-us">
+            <h5 class="footer-section-title">Know us better</h5>
+            <ul class="footer-menu">
+              <li><a href="#about" class="footer-link">About Us</a></li>
+              <li><a href="#services" class="footer-link">Our Services</a></li>
+              <li><a href="#how-it-works" class="footer-link">How It Works</a></li>
+            </ul>
+          </div>
+          <div class="footer-section footer-social">
+            <h5 class="footer-section-title">Social</h5>
+            <div class="footer-social-icons">
+              <a href="https://www.facebook.com/designplussg" aria-label="Facebook" class="footer-social-link" target="_blank" rel="noopener noreferrer"><img src="assets/icons/facebook.svg" alt="Facebook" class="footer-social-icon" loading="lazy" decoding="async"></a>
+              <a href="https://www.behance.net/designplussg" aria-label="Behance" class="footer-social-link" target="_blank" rel="noopener noreferrer"><img src="assets/icons/behance.svg" alt="Behance" class="footer-social-icon" loading="lazy" decoding="async"></a>
+              <a href="https://www.instagram.com/sgdesignplus/" aria-label="Instagram" class="footer-social-link" target="_blank" rel="noopener noreferrer"><img src="assets/icons/instagram.svg" alt="Instagram" class="footer-social-icon" loading="lazy" decoding="async"></a>
+            </div>
+          </div>
+        </div>
+        <div class="footer-links-2">
+          <div class="footer-section footer-get-started">
+            <h5 class="footer-section-title">Get started</h5>
+            <ul class="footer-menu">
+              <li><a href="#designers" class="footer-link">Designers/Partners</a></li>
+              <li><a href="#projects" class="footer-link">Projects</a></li>
+            </ul>
+          </div>
+          <div class="footer-section footer-download">
+            <h5 class="footer-section-title">Download</h5>
+            <div class="footer-store-badges">
+              <a href="https://apps.apple.com/us/app/designplus-interior/id6451096540" target="_blank" rel="noopener noreferrer">
+                <img src="assets/images/app-store.svg" alt="App Store" class="footer-store-img" loading="lazy" decoding="async">
+              </a>
+              <a href="https://play.google.com/store/apps/details?id=com.designplus.sg" target="_blank" rel="noopener noreferrer">
+                <img src="assets/images/play-store.svg" alt="Google Play" class="footer-store-img" loading="lazy" decoding="async">
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="footer-links-3">
+          <div class="footer-section footer-support">
+            <h5 class="footer-section-title">Support</h5>
+            <ul class="footer-menu">
+              <li><a href="#faqs" class="footer-link">FAQs</a></li>
+              <li><a href="#contact" class="footer-link">Contact Us</a></li>
+              <li><a href="#career" class="footer-link">Career</a></li>
+              <li><a href="#onboarding" class="footer-link">Designer Onboarding</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copy container-fluid">
+      <div class="container">
+        <div class="footer-copy-left">
+          <div class="footer-copy-text">© Copyright Design Plus Interior Pte. Ltd., <span data-current-year>2025</span> . All Rights Reserved.</div>
+        </div>
+        <div class="footer-copy-right">
+          <a href="#faqs" class="footer-copy-link">FAQs</a>
+          <a href="#terms" class="footer-copy-link">Terms of Service</a>
+          <a href="#privacy" class="footer-copy-link">Privacy Policy</a>
+        </div>
+      </div>
+    </div>
+    <div class="footer-note container-fluid">
+      <div class="container">
+        <div class="footer-note-text">DESIGN PLUS INTERIOR PTE LTD will be committed to ensuring the customer data and particulars will be kept confidential.</div>
+      </div>
+    </div>
+  </footer>
 
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
