--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <!-- Center Navigation -->
         <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="#renovation">Renovation Idea</a>
+            <a class="nav-link" href="renovation-ideas.html">Renovation Idea</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#interior">Interior Designers</a>
